<resources>
    <string name="app_name">DoItNow</string>
    <string name="hello_world">Hello World</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="no_account">Dont\' have an account? Register Here</string>
    <string name="id">Id</string>
    <string name="gender">Gender</string>
    <string name="logout">Logout</string>
    <string name="login_here">Already have an Account? Login Here</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="task_title">Create Your Task</string>
    <string name="permission_mandatory">These permissions are mandatory for the application. Please allow access.</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="select_source">Select source</string>
    <string name="default_cat">default</string>
    <string name="date_required">Date required</string>
    <string name="task_required">Task required</string>
    <string name="desc_required">Desc required</string>
    <string name="time_required">Time required</string>
    <string name="profile">Profile</string>
    <string name="select_time">Select Time</string>
    <string name="saved">Saved</string>
    <string name="ask_email">Please enter your email</string>
    <string name="ask_password">Please enter your password</string>
    <string name="invalid_email_password">Invalid email or password</string>
    <string name="already_in_profile">Already in Profile</string>
    <string name="ask_username">Please enter username</string>
    <string name="ask_valid_email">Enter a valid email</string>
    <string name="error_registration">Some error occurred while registering user</string>
    <string name="task_list_title">Your Tasks</string>
    <string name="already_in_task_list">Already in To Do List</string>
    <string name="no_word">No Word</string>
    <string name="time_changed_broadcast">You have changed your time, please check your tasks due time</string>
    <string name="timezone_changed_broadcast">You have changed your timezone, please check your tasks due time</string>
    <string name="date_changed_broadcast">You have changed your date, please check your tasks due time</string>
    <string name="complete_task">Completed</string>
    <string name="not_complete_task">Not Completed</string>
    <string name="is_due">is due!</string>
    <string name="ask_category">Please fill in the category name</string>
    <string name="title_task_detail">Task Detail</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="none">None</string>
    <string name="task_name">Task Name</string>
    <string name="ask_task_name">Enter your task name</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="ask_description">Enter your task description</string>
    <string name="due_date">Due Date</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="reminder">Reminder</string>
    <string name="attachments">Attachments</string>
    <string name="save">Save</string>
    <string name="english_language">English Language</string>
    <string name="spanish_language">Spanish Language</string>
    <string name="mark_as_finished">Mark as Finished</string>
    <string name="date_and_time">Date and Time</string>
    <string name="delete">Delete</string>
    <string name="hint_category">Enter Category Name</string>
    <string name="save_category">Save Category</string>
    <string name="category_list">Category List</string>
    <string name="list_categories">List Categories</string>
    <string name="my_profile">My Profile</string>
    <string name="to_do_list">To Do List</string>
    <string name="password_constraint">Password length should consist of at least 6 characters</string>

</resources>
