<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.AddTaskActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <EditText
                android:id="@+id/editTextTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ask_task_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <Spinner
                android:id="@+id/spinner_categories"
                android:layout_width="149dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.498" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <EditText
                android:id="@+id/editTextDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ask_description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/due_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/date"
                android:inputType="none" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/time"
                android:inputType="none" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reminder"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <Switch
                android:id="@+id/reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attachments"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/task_image_view"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_centerInParent="true"
                        android:adjustViewBounds="true"
                        android:background="#9C9C9C"
                        android:scaleType="centerCrop" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/task_image_file_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/floating_button_add_task"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="8dp"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:src="@drawable/ic_add"
                        android:tint="@color/colorLight"
                        app:fabSize="normal" />
                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/button_save"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/colorLight" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>