<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.TaskDetailActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/relativelayout1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingTop="@dimen/abc_action_bar_icon_vertical_padding_material">

                <CheckBox
                    android:id="@+id/checkBoxFinished"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:checked="false"
                    android:gravity="center"
                    android:text="@string/mark_as_finished" />

            </RelativeLayout>

            <TextView
                android:id="@+id/task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/task_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/task_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/category"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/due_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/task_due_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/date_and_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/attachments"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/task_attachment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <ImageView
                android:id="@+id/task_detail_image_view"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:adjustViewBounds="true"
                android:background="#9C9C9C"
                android:scaleType="centerCrop" />

            <Button
                android:id="@+id/button_delete"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@color/colorRed"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/colorLight" />

        </LinearLayout>


    </RelativeLayout>
</ScrollView>