<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activities.ProfileActivity">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/id"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                        <TextView
                            android:id="@+id/textViewId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/username"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                        <TextView
                            android:id="@+id/textViewUsername"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/email"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                        <TextView
                            android:id="@+id/textViewEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/gender"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                        <TextView
                            android:id="@+id/textViewGender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                    </TableRow>


                </TableLayout>

                <Button
                    android:id="@+id/buttonLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logout" />

                <Button
                    android:id="@+id/buttonEnglish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english_language" />

                <Button
                    android:id="@+id/buttonSpanish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spanish_language" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/navigation_menu">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>